MDEV-19751 Wrong partitioning by KEY() after key dropped

Empty partition by key() clause implies that key might be changed by
ALTER, but inplace algorithm must not be used since repartitioning is
required for a different key.